chnaged README again

--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This project uses image processing to figure out if accident occured.
+This project uses image processing to figure out if accident did occur.
