--- a/README
+++ b/README
@@ -1,1 +1,1 @@
-This project uses image processing to figure out if accident did occur.
+This project uses image processing to figure out if accident did occur or did not occur.
